Fixed long city names on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ section {
 .city-temp {
   display: flex;
   color: var(--yellow);
+  flex-wrap: wrap;
 }
 
 .weather-container {
